admin casi acabado

--- a/hewwwe/front/hewwwe/src/styles/pages/admin/AdminProductsPage.css
+++ b/hewwwe/front/hewwwe/src/styles/pages/admin/AdminProductsPage.css
@@ -1,23 +1,25 @@
 .admin-products-container {
   min-height: 100vh;
   width: 100vw;
-  background-color: #888;
   position: fixed;
   top: 0;
   left: 0;
+  background-color: #888;
   padding-top: 64px;
   overflow: auto;
 }
 
 .admin-products-content {
   padding: 24px;
+  width: 95%; /* Cambiado de max-width fijo a ancho porcentual */
+  margin: 0 auto;
 }
 
 .admin-products-header {
+  margin-bottom: 24px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 24px;
 }
 
 .admin-products-title {
