--- a/hewwwe/front/hewwwe/src/styles/pages/admin/AdminExchangesPage.css
+++ b/hewwwe/front/hewwwe/src/styles/pages/admin/AdminExchangesPage.css
@@ -1,4 +1,4 @@
-.admin-invoices-container {
+.admin-products-container {
   min-height: 100vh;
   width: 100vw;
   position: fixed;
@@ -9,20 +9,20 @@
   overflow: auto;
 }
 
-.admin-invoices-content {
+.admin-products-content {
   padding: 24px;
   width: 95%;
   margin: 0 auto;
 }
 
-.admin-invoices-header {
+.admin-products-header {
   margin-bottom: 24px;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.admin-invoices-title {
+.admin-products-title {
   color: white;
   font-weight: bold;
 }
