--- a/hewwwe/front/hewwwe/src/styles/pages/ProductsPage.css
+++ b/hewwwe/front/hewwwe/src/styles/pages/ProductsPage.css
@@ -1,12 +1,10 @@
 .products-container {
   min-height: 100vh;
+  height: 100vh;
   width: 100vw;
-  position: fixed;
-  top: 0;
-  left: 0;
   background-color: #edede9;
   padding-top: 64px;
-  overflow: auto;
+  overflow-y: auto;
 }
 
 .products-content {
